# marl-book-exercises

./: Makefile  pyproject.toml
tabular_marl/: iql.py  train_iql.py
