[project]
name = "marl-book-exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=0.29.1",
    "marlbase",
    "matplotlib>=3.9.2",
    "numpy==1.26.4",
]

[tool.uv.sources]
marlbase = { path = "marl-book-codebase" }
