[project]
name = "marl-book-exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click==8.1.7",
    "einops==0.8.0",
    "gymnasium>=0.29.1",
    "hydra-ax-sweeper==1.1.5",
    "hydra-core==1.3.2",
    "hydra-submitit-launcher==1.2.0",
    "imageio-ffmpeg==0.5.1",
    "imageio==2.9.0",
    "lbforaging",
    "marlbase",
    "matplotlib==3.9.2",
    "munch==4.0.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pyyaml==6.0.2",
    "rware",
    "seaborn==0.13.2",
    "torch==2.4.0",
]

[tool.uv.sources]
marlbase = { path = "marl-book-codebase" }
lbforaging = { git = "https://github.com/uoe-agents/lb-foraging.git" }
rware = { git = "https://github.com/uoe-agents/robotic-warehouse.git" }
